--- a/views/title.ejs
+++ b/views/title.ejs
@@ -16,15 +16,15 @@
   }
         .lolo{
         width: 250px;
-        margin-left: 120px;
-        margin-top: 60px;
+        margin-left: 50px;
+        margin-top: 0px;
         position: relative; 
         padding-left: 15px;
         background-color: rgb(255, 255, 255);
-        height: 350px;
+        height: 500px;
       }
       .registerName, .registerEmail, .regPassword{
-        border:0; padding:7px 0; border-bottom:1px solid; size: 100;
+        border:0; padding:20px 0; border-bottom:1px solid; size: 100;
       } 
 
       .button1{
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body>
-  <form action = "/title" method="post">
+  <form action = "/title" method="post"> <!--API-->
     <div class="container">
     <div class = "lolo">
     <h1>
@@ -59,7 +59,7 @@
     <br><br>
    
     
-    <button class="button1">Sign Up</button>
+    <button class="button1">Create</button>
     </form>
    
     </div>
