--- a/views/test.ejs
+++ b/views/test.ejs
@@ -8,8 +8,7 @@
     <style>
         </style>
         <body>
-            <h1><%-name%></h1>
-            <h1><%-age%></h1>
+            <h1>lolo</h1>
             
         </body>
         
